# code-explorer-agent

./: .gitignore  CODEX_HANDOFF.md  README.md  install.sh  pyproject.toml  requirements.txt
src/ce_agent/: __init__.py  auth.py  cli.py  demo.py  server.py  storage.py  tmux.py
tests/: conftest.py  test_auth.py  test_integration.py  test_protocol_contract.py  test_storage.py  test_tmux.py
